--- a/UI/ColorVision.ImageEditor/Properties/Resources.ru.resx
+++ b/UI/ColorVision.ImageEditor/Properties/Resources.ru.resx
@@ -168,4 +168,7 @@
   <data name="BitmapScalingMode" xml:space="preserve">
     <value>режим масштабирования растрового изображения</value>
   </data>
+  <data name="Invert" xml:space="preserve">
+    <value>Инвертировать</value>
+  </data>
 </root>
