--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -891,4 +891,10 @@
   <data name="UseHDR" xml:space="preserve">
     <value>Enable HDR</value>
   </data>
+  <data name="UploadCalibrationFiles" xml:space="preserve">
+    <value>Upload calibration file</value>
+  </data>
+  <data name="RestorePointCreatedSuccessfully" xml:space="preserve">
+    <value>Restore point created successfully</value>
+  </data>
 </root>
