--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -891,4 +891,10 @@
   <data name="UseHDR" xml:space="preserve">
     <value>Включить HDR</value>
   </data>
+  <data name="UploadCalibrationFiles" xml:space="preserve">
+    <value>Загрузить файл калибровки</value>
+  </data>
+  <data name="RestorePointCreatedSuccessfully" xml:space="preserve">
+    <value>Точка восстановления успешно создана</value>
+  </data>
 </root>
