--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -951,4 +951,13 @@
   <data name="BindPhysicalCameraCode" xml:space="preserve">
     <value>物理カメラをバインドするためのコード</value>
   </data>
+  <data name="FlowTemplate" xml:space="preserve">
+    <value>プロセステンプレート</value>
+  </data>
+  <data name="SearchResults" xml:space="preserve">
+    <value>クエリ結果</value>
+  </data>
+  <data name="FlowResultManagement" xml:space="preserve">
+    <value>プロセス結果管理</value>
+  </data>
 </root>
