--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -951,4 +951,13 @@
   <data name="BindPhysicalCameraCode" xml:space="preserve">
     <value>물리적 카메라 바인딩을 위한 코드</value>
   </data>
+  <data name="FlowTemplate" xml:space="preserve">
+    <value>프로세스 템플릿</value>
+  </data>
+  <data name="SearchResults" xml:space="preserve">
+    <value>쿼리 결과</value>
+  </data>
+  <data name="FlowResultManagement" xml:space="preserve">
+    <value>프로세스 결과 관리</value>
+  </data>
 </root>
