--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -951,4 +951,13 @@
   <data name="BindPhysicalCameraCode" xml:space="preserve">
     <value>綁定實體相機代碼</value>
   </data>
+  <data name="FlowTemplate" xml:space="preserve">
+    <value>流程模板</value>
+  </data>
+  <data name="SearchResults" xml:space="preserve">
+    <value>查詢結果</value>
+  </data>
+  <data name="FlowResultManagement" xml:space="preserve">
+    <value>流程結果管理</value>
+  </data>
 </root>
